// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fun.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export function fun() {}

=====================================output=====================================
// @flow

export function fun() {}

================================================================================
`;

exports[`uses_fun.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import type {fun} from './fun';

({}: fun)

=====================================output=====================================
// @flow

import type { fun } from "./fun";

({}: fun);

================================================================================
`;
